# text-to-cae

./: .gitignore  LICENSE  README.md  README.zh-CN.md
MCP/Ansys/AEDT MCP/: .env.example  README.md  README.zh-CN.md  aedt_close_watcher.py  aedt_launcher.py  aedt_mcp_bridge.py  aedt_socket_protocol.py  aedt_target.py  mcp_server.py  pyaedt_backend.py  pyaedt_worker.py  pyproject.toml  reload_bridge_in_aedt.py  session_discovery.py  stop_bridge_in_aedt.py  stop_mcp.py  worker_client.py
MCP/Ansys/AEDT MCP/examples/: mcp_config.example.json
MCP/Ansys/AEDT MCP/scripts/: create_245ghz_patch_antenna.py  install_aedt_mcp_autostart.ps1  install_aedt_toolkit_button.ps1  launch_aedt_with_mcp_bridge.ps1  remove_legacy_aedt_mcp_toolbar.ps1  start_aedt_mcp_bridge_in_aedt.py  stop_aedt_mcp_bridge_in_aedt.py
MCP/Ansys/AEDT MCP/tests/: test_aedt_close_watcher.py  test_aedt_launcher.py  test_aedt_target.py  test_autostart_scripts.py  test_mcp_tools.py  test_package_migration.py  test_protocol.py  test_pyaedt_backend.py  test_session_discovery.py  test_worker_process.py
MCP/Ansys/Fluent MCP/: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml  server.py
MCP/Ansys/Fluent MCP/examples/: codex_config.example.toml
MCP/Ansys/Fluent MCP/tests/: test_fluent_bridge.py  test_pyfluent_session.py  test_server_defaults.py
MCP/Ansys/Fluent MCP/tools/: __init__.py  fluent_bridge.py  pyfluent_session.py
MCP/Ansys/Workbench MCP/: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml  server.py
MCP/Ansys/Workbench MCP/examples/: codex_config.example.toml
MCP/Ansys/Workbench MCP/tools/: workbench_bridge.py  workbench_file_queue.py  workbench_socket_timer.py
MCP/Ansys/Workbench MCP/workbench_plugin/: WorkbenchMCP.xml  main.py  mechanical_queue_processor.py  mechanical_socket_timer_v7.py
MCP/CST/: .env.example  .gitignore  README.md  README.zh-CN.md  cst_automation.py  cst_parameter_sweep.py  cst_runtime_cli_bridge.py  cst_schematic.py  cst_typed_wrapper_generator.py  mcp_server.py  pyproject.toml
MCP/CST/examples/: codex_config.example.toml  design_studio_cosim_demo.py
MCP/CST/examples/design_studio_cosim_demo_run/: fss_rlc_diode_schematic_demo_1783569136.cst  fss_rlc_diode_schematic_demo_1783569136_demo_log.json  fss_rlc_diode_schematic_demo_1783569136_se_il.csv  touchstone_nport_block_demo_1783569178.cst  touchstone_nport_block_demo_1783569178_sparameters.s2p
MCP/CST/examples/design_studio_cosim_demo_run/fss_rlc_diode_schematic_demo_1783569136/Model/: Model.prj  simulationproperties.docstore
MCP/CST/examples/design_studio_cosim_demo_run/fss_rlc_diode_schematic_demo_1783569136/Model/DS/: Model.dib  Model.dsn  schematic.xml
MCP/CST/examples/design_studio_cosim_demo_run/fss_rlc_diode_schematic_demo_1783569136/Temp/: resourceusage.sconf
MCP/CST/examples/design_studio_cosim_demo_run/touchstone_nport_block_demo_1783569178/Model/: desettings.ini  simulationproperties.docstore
MCP/CST/examples/design_studio_cosim_demo_run/touchstone_nport_block_demo_1783569178/Temp/: resourceusage.sconf
MCP/CST/tests/: test_cst_automation.py  test_cst_parameter_sweep.py  test_cst_runtime_cli_bridge.py  test_cst_schematic.py  test_cst_typed_wrapper_generator.py
Skill/: README.md  README.zh-CN.md
viewer/: .gitignore  README.md  components.json  (+6 more)
(+198 files in other folders)
