[project]
name = "cst-studio-suite-mcp"
version = "0.1.0"
description = "MCP server for controlling CST Studio Suite through CST Python automation"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
py-modules = [
    "cst_automation",
    "cst_parameter_sweep",
    "cst_runtime_cli_bridge",
    "cst_schematic",
    "cst_typed_wrapper_generator",
    "mcp_server",
]

[tool.uv]
package = false
