[project]
name = "ansys-aedt-mcp"
version = "0.1.0"
description = "PyAEDT-backed MCP server for Ansys Electronics Desktop"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "pyaedt==1.1.0",
    "psutil>=5.9,<8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
py-modules = [
    "aedt_target",
    "worker_protocol",
    "pyaedt_backend",
    "pyaedt_worker",
    "worker_client",
    "session_discovery",
    "aedt_launcher",
    "mcp_server",
]

[tool.uv]
package = false
