[project]
name = "ansys-workbench-mcp"
version = "0.1.0"
description = "MCP server and ANSYS Mechanical ACT bridge for Workbench automation"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
mechanical = ["ansys-mechanical-core>=0.11"]
dev = ["pytest>=8.0,<9"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = false
